--- a/css/styles.css
+++ b/css/styles.css
@@ -382,7 +382,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 }
 
 .social-list-item-end {
-    width: calc((100% - 72px); / 4);
     text-align: center;
     width: 40px;
     height: 40px;
@@ -394,3 +393,223 @@ align-items: baseline;
 .logo-end-conteiner {margin-right: 120px;}
 
 .team-social-icon {fill: var(--cloud-color);}
+
+.social-footer {margin-right: 80px;}
+.form-footer {
+    display: flex;
+gap: 24px
+;}
+.form-titel {color: var(--wite-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+    display: flex;
+flex-direction: column;
+gap: 16px;}
+
+.footer-email {border-radius: 4px;
+    border: 1px solid var(--WHITE, #FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+color: var(--wite-color);
+background-color: var(--primeri-color);
+padding-top: 8px;
+padding-bottom: 8px;
+padding-left: 16px;
+width: 264px;}
+
+.footer-button {display: flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+border-radius: 4px;
+    background: var(--main-color);
+    font-size: 16px;
+        font-weight: 500;
+        line-height: 1.50;
+        letter-spacing: 0.04em;
+color: var(--wite-color);
+ cursor: pointer;
+ width: 165px;
+height: 40px;
+margin-top: 40px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 15%);}
+
+ .footer-button:hover,
+ .footer-button:focus {
+     background-color: #404BBF;
+ }
+ .footer-email::placeholder {color: var(--wite-color);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;}
+    /* Footer */
+
+ /* BACKDROP  */
+
+ .backdrop {background-color: rgba(46, 47, 66, 0.40);position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999999;
+    width: 100%;
+    height: 100%;
+    
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)}
+
+        .backdrop.is-open {
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
+        }
+   /* BACKDROP WITH MODAL WINDOW */
+
+  /* MODAL WINDOW */
+.modal {position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 408px;
+    padding-top: 72px;
+    padding-right: 24px;
+    padding-left: 24px;
+    padding-bottom: 24px;
+    border-radius: 4px;
+    background-color: #FCFCFC;}
+
+.close-button {display: flex;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    background-color: #E7E9FC;
+    border: none;
+    border-radius: 50%;
+    padding: 0;
+width: 24px;
+height: 24px;
+align-items: center;
+justify-content: center;
+stroke: #2E2F42;}
+/* .close-button-icon {stroke: #2E2F42;} */
+.close-button:hover,
+.close-button:focus {background-color: var(--main-color);
+fill: var(--wite-color);}
+
+/* MODAL WINDOW */
+
+.text-modal{color: var(--primeri-color);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+margin-bottom: 16px;}
+
+.form-modal-label{color:  #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+}
+.label-conteiner{margin-bottom: 8px;
+position: relative;}
+
+.inpute-modal{width: 100%;
+height: 58px;
+border-radius: 4px;
+border: 1px solid  rgba(46, 47, 66, 0.40);
+font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+padding-left: 62px;
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.form-icons{position: absolute;
+top: 50%;
+left: 16px;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.inpute-modal:focus{border: 1px solid var(--main-color);
+outline: transparent;}
+.inpute-modal:focus+.form-icons{fill: var(--main-color);}
+
+.coments{width: 100%;
+height: 138px;
+border-radius: 4px;
+border: 1px solid  rgba(46, 47, 66, 0.40);
+padding: 8px 16px;
+resize: none;
+transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+color: rgba(46, 47, 66, 0.40);
+font-size: 12px;
+font-weight: 400;
+line-height: 2;
+letter-spacing: 0.04em;
+margin-bottom: 16px;}
+
+.coments::placeholder{color:  rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+        font-weight: 400;
+        line-height: 2;
+        letter-spacing: 0.04em;
+ }
+
+.coments:focus {border: 1px solid var(--main-color);
+    outline: transparent;}
+
+.text-chec {display: inline-flex;
+    align-items: center;
+    justify-content: center;
+width: 16px;
+height: 16px;
+border: 1px solid rgba(46, 47, 66, 0.40);
+cursor: pointer;
+fill: transparent; }
+
+.chec-label {color:  #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+}
+
+.text-chec-link {color: var(--main-color);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;}
+
+.chec-box:checked + .chec-label > .text-chec {background-color: var(--main-color);
+fill: var(--cloud-color);}
+
+.chec-conteiner {margin-bottom: 24px;}
+
+.buttom-mod {background-color: var(--main-color);
+padding: 16px 32px;
+min-width: 169px;
+height: 56px;
+color: var(--wite-color);
+margin-left: 120px;
+margin-right: 120px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.50;
+    letter-spacing: 0.04em;
+border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.buttom-mod:hover,
+.buttom-mod:focus {background-color: #404BBF;}
