--- a/css/styles.css
+++ b/css/styles.css
@@ -350,6 +350,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);}
             font-weight: 400;
             line-height: 1.50;
             letter-spacing: 0.02em;
+            
         }
 .social-text {color: var(--wite-color);
         font-size: 16px;
@@ -390,7 +391,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .end-container {display: flex;
 align-items: baseline;
 }
-.logo-end-conteiner {margin-right: 120px;}
+.logo-end-conteiner {width: 264px;
+    margin-right: 120px;}
 
 .team-social-icon {fill: var(--cloud-color);}
 
@@ -413,17 +415,21 @@ gap: 16px;}
     border: 1px solid var(--WHITE, #FFF);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 color: var(--wite-color);
-background-color: var(--primeri-color);
+background-color: transparent;
 padding-top: 8px;
 padding-bottom: 8px;
 padding-left: 16px;
-width: 264px;}
+width: 264px;
+height: 40px;
+font-size: 12px;
+line-height: 1.5;
+letter-spacing: 0.04em;}
 
 .footer-button {display: flex;
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+    
 border-radius: 4px;
     background: var(--main-color);
     font-size: 16px;
@@ -432,11 +438,12 @@ border-radius: 4px;
         letter-spacing: 0.04em;
 color: var(--wite-color);
  cursor: pointer;
- width: 165px;
+ min-width: 165px;
 height: 40px;
-margin-top: 40px;
+
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 15%);}
+box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 15%);
+border: none;}
 
  .footer-button:hover,
  .footer-button:focus {
@@ -447,6 +454,8 @@ box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 15%);}
     font-weight: 400;
     line-height: 2;
     letter-spacing: 0.04em;}
+
+    .footer-icon {margin-left: 16px;}
     /* Footer */
 
  /* BACKDROP  */
@@ -462,7 +471,7 @@ box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 15%);}
     visibility: hidden;
     pointer-events: none;
 
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1)}
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
         .backdrop.is-open {
             opacity: 1;
@@ -475,14 +484,17 @@ box-shadow: 0px 4px 4px 0px rgb(0 0 0 / 15%);}
 .modal {position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 408px;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px;
+    min-height: 584px;
     padding-top: 72px;
     padding-right: 24px;
     padding-left: 24px;
     padding-bottom: 24px;
     border-radius: 4px;
-    background-color: #FCFCFC;}
+    background-color: #FCFCFC;
+box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .close-button {display: flex;
     position: absolute;
@@ -496,10 +508,15 @@ width: 24px;
 height: 24px;
 align-items: center;
 justify-content: center;
-stroke: #2E2F42;}
-/* .close-button-icon {stroke: #2E2F42;} */
+stroke: #2E2F42;
+border: 1px solid rgba(0, 0, 0, 0.1);
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.close-button-icon {transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
 .close-button:hover,
-.close-button:focus {background-color: var(--main-color);
+.close-button:focus {background-color: #404bbf;
 fill: var(--wite-color);}
 
 /* MODAL WINDOW */
@@ -516,11 +533,14 @@ margin-bottom: 16px;}
 .form-modal-label{color:  #8E8F99;
     font-size: 12px;
     font-weight: 400;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.04em;
-}
-.label-conteiner{margin-bottom: 8px;
-position: relative;}
+display: block;
+margin-bottom: 4px;}
+
+.label-conteiner{
+position: relative;
+margin-bottom: 8px;}
 
 .inpute-modal{width: 100%;
 height: 58px;
@@ -595,18 +615,20 @@ fill: var(--cloud-color);}
 
 .chec-conteiner {margin-bottom: 24px;}
 
-.buttom-mod {background-color: var(--main-color);
+.buttom-mod {display: block;
+    background-color: var(--main-color);
 padding: 16px 32px;
 min-width: 169px;
 height: 56px;
 color: var(--wite-color);
-margin-left: 120px;
-margin-right: 120px;
+margin-left: auto;
+margin-right: auto;
     text-align: center;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.50;
     letter-spacing: 0.04em;
+    border: none;
 border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
