--- a/css/styles.css
+++ b/css/styles.css
@@ -493,7 +493,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
     padding-bottom: 24px;
     border-radius: 4px;
     background-color: #FCFCFC;
-box-shadow: зі значенням 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .close-button {display: flex;
@@ -517,7 +517,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 
 .close-button:hover,
 .close-button:focus {background-color: #404bbf;
-fill: var(--wite-color);}
+fill: var(--wite-color);
+border: none;}
 
 /* MODAL WINDOW */
 
@@ -530,6 +531,7 @@ fill: var(--wite-color);}
 
 margin-bottom: 16px;}
 
+.form-modal-conteiner {margin-bottom: 8px;}
 .form-modal-label{color:  #8E8F99;
     font-size: 12px;
     font-weight: 400;
@@ -540,7 +542,7 @@ margin-bottom: 4px;}
 
 .label-conteiner{
 position: relative;
-margin-bottom: 8px;}
+}
 
 .inpute-modal{width: 100%;
 height: 58px;
