--- a/css/styles.css
+++ b/css/styles.css
@@ -570,8 +570,8 @@ outline: transparent;}
 
 .form-modal-conteiner-textarea {margin-bottom: 16px;}
 
-.coments{width: 100%;
-height: 138px;
+.comments{width: 100%;
+height: 120px;
 border-radius: 4px;
 border: 1px solid  rgba(46, 47, 66, 0.40);
 padding: 8px 16px;
@@ -580,18 +580,18 @@ transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 color: rgba(46, 47, 66, 0.40);
 font-size: 12px;
 font-weight: 400;
-line-height: 2;
+line-height: 1.17;
 letter-spacing: 0.04em;
 margin-bottom: 16px;}
 
-.coments::placeholder{color:  rgba(46, 47, 66, 0.40);
+.comments::placeholder{color:  rgba(46, 47, 66, 0.40);
     font-size: 12px;
         font-weight: 400;
         line-height: 2;
         letter-spacing: 0.04em;
  }
 
-.coments:focus {border: 1px solid var(--main-color);
+.coments:focus {border-color: #4D5AE5;
     outline: transparent;}
 
 .text-chec {display: inline-flex;
@@ -601,12 +601,14 @@ width: 16px;
 height: 16px;
 border: 1px solid rgba(46, 47, 66, 0.40);
 cursor: pointer;
-fill: transparent; }
+fill: transparent; 
+border-radius: 2px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .chec-label {color:  #8E8F99;
     font-size: 12px;
     font-weight: 400;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.04em;
 }
 
@@ -617,8 +619,9 @@ fill: transparent; }
     letter-spacing: 0.04em;
     text-decoration-line: underline;}
 
-.chec-box:checked + .chec-label > .text-chec {background-color: var(--main-color);
-fill: var(--cloud-color);}
+.chec-box:checked + .chec-label > .text-chec {background-color: #404bbf;
+fill: var(--cloud-color);
+border: none;}
 
 .chec-conteiner {margin-bottom: 24px;}
 
