--- a/css/styles.css
+++ b/css/styles.css
@@ -582,7 +582,10 @@ font-size: 12px;
 font-weight: 400;
 line-height: 1.17;
 letter-spacing: 0.04em;
-margin-bottom: 16px;}
+margin-bottom: 16px;
+background-color: transparent;
+outline: transparent; 
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .comments::placeholder{color:  rgba(46, 47, 66, 0.40);
     font-size: 12px;
@@ -591,7 +594,7 @@ margin-bottom: 16px;}
         letter-spacing: 0.04em;
  }
 
-.coments:focus {border-color: #4D5AE5;
+.comments:focus {border-color: #4D5AE5;
     outline: transparent;}
 
 .text-chec {display: inline-flex;
