--- a/css/styles.css
+++ b/css/styles.css
@@ -643,6 +643,7 @@ margin-right: auto;
     letter-spacing: 0.04em;
     border: none;
 border-radius: 4px;
+cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
