--- a/css/styles.css
+++ b/css/styles.css
@@ -407,9 +407,7 @@ gap: 24px
     line-height: 1.50;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
-    display: flex;
-flex-direction: column;
-gap: 16px;}
+   }
 
 .footer-email {border-radius: 4px;
     border: 1px solid var(--WHITE, #FFF);
@@ -561,6 +559,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 .form-icons{position: absolute;
 top: 50%;
 left: 16px;
+fill: #2E2F42;
 transform: translateY(-50%);
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
@@ -570,7 +569,8 @@ outline: transparent;}
 
 .form-modal-conteiner-textarea {margin-bottom: 16px;}
 
-.comments{width: 100%;
+.comments{display: block;
+    width: 100%;
 height: 120px;
 border-radius: 4px;
 border: 1px solid  rgba(46, 47, 66, 0.40);
@@ -582,7 +582,6 @@ font-size: 12px;
 font-weight: 400;
 line-height: 1.17;
 letter-spacing: 0.04em;
-margin-bottom: 16px;
 background-color: transparent;
 outline: transparent; 
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
@@ -598,6 +597,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
     outline: transparent;}
 
 .text-chec {display: inline-flex;
+    margin-right: 8px;
     align-items: center;
     justify-content: center;
 width: 16px;
