--- a/css/styles.css
+++ b/css/styles.css
@@ -608,6 +608,9 @@ fill: transparent;
 border-radius: 2px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
+.icon-click {width: 16px;
+height: 16px;}
+
 .chec-label {color:  #8E8F99;
     font-size: 12px;
     font-weight: 400;
