--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cu
 .icon-click {width: 16px;
 height: 16px;}
 
-.chec-label {color:  #8E8F99;
+.chec-label {display: flex;
+    align-items: center;
+    color:  #8E8F99;
     font-size: 12px;
     font-weight: 400;
     line-height: 1.17;
@@ -623,7 +625,9 @@ height: 16px;}
     font-weight: 400;
     line-height: 1.33;
     letter-spacing: 0.04em;
-    text-decoration-line: underline;}
+    text-decoration-line: underline;
+    margin-left: 4px;
+}
 
 .chec-box:checked + .chec-label > .text-chec {background-color: #404bbf;
 fill: var(--cloud-color);
